--- a/.travis.yml
+++ b/.travis.yml
@@ -5,4 +5,6 @@ python:
 install:
   - pip install -U pip
   - pip install -e .[tests]
-script: py.test tests -v
+script:
+  - py.test tests -v
+  - pip install 'typing<3.5.2' && py.test tests -v
